Add outgoing requests collection

--- a/src/GrpcService/GrpcService.csproj
+++ b/src/GrpcService/GrpcService.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.24.0" />
     <PackageReference Include="OpenTelemetry.Collector.AspNetCore" Version="0.2.0-alpha.100" />
+    <PackageReference Include="OpenTelemetry.Collector.Dependencies" Version="0.2.0-alpha.100" />
     <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="0.2.0-alpha.100" />
     <PackageReference Include="OpenTelemetry.Hosting" Version="0.2.0-alpha.100" />
   </ItemGroup>
