Add EF Core and PosgreSQL into the mix

--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -22,3 +22,12 @@ services:
     ports:
       - "5672:5672" # rabbit itself
       - "15672:15672" # management ui
+  postgres:
+    image: "postgres:13-alpine"
+    hostname: "postgres"
+    container_name: postgres
+    ports:
+      - "5432:5432"
+    environment:
+        POSTGRES_USER: "user"
+        POSTGRES_PASSWORD: "pass"
